--- a/skillmatrix-impl/pom.xml
+++ b/skillmatrix-impl/pom.xml
@@ -16,7 +16,14 @@
 			<groupId>by.skillmatrix</groupId>
 			<artifactId>skillmatrix-api</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>by.skillmatrix</groupId>
+			<artifactId>skillmatrix-service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>by.skillmatrix</groupId>
+			<artifactId>skillmatrix-service-impl</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -25,6 +32,22 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>by.skillmatrix</groupId>
+			<artifactId>skillmatrix-service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 	</dependencies>
 
