--- a/skillmatrix-repository-impl/pom.xml
+++ b/skillmatrix-repository-impl/pom.xml
@@ -12,4 +12,26 @@
 
     <artifactId>skillmatrix-repository-impl</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>by.skillmatrix</groupId>
+            <artifactId>skillmatrix-repository</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+    </dependencies>
 </project>
