--- a/skillmatrix-repository/pom.xml
+++ b/skillmatrix-repository/pom.xml
@@ -12,4 +12,14 @@
 
     <artifactId>skillmatrix-repository</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>by.skillmatrix</groupId>
+            <artifactId>skillmatrix-entity</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
