--- a/skillmatrix-service-impl/pom.xml
+++ b/skillmatrix-service-impl/pom.xml
@@ -12,4 +12,35 @@
 
     <artifactId>skillmatrix-service-impl</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>by.skillmatrix</groupId>
+            <artifactId>skillmatrix-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>by.skillmatrix</groupId>
+            <artifactId>skillmatrix-repository</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>by.skillmatrix</groupId>
+            <artifactId>skillmatrix-repository-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
