--- a/skillmatrix-impl/src/main/resources/application.yml
+++ b/skillmatrix-impl/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
 logging:
   level:
-    ROOT: INFO
-    org.springframework: INFO
+    ROOT: TRACE
+    org.springframework: TRACE
