--- a/skillmatrix-security/pom.xml
+++ b/skillmatrix-security/pom.xml
@@ -31,6 +31,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>by.skillmatrix</groupId>
+            <artifactId>skillmatrix-repository</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
         </dependency>
