--- a/skillmatrix-dto/pom.xml
+++ b/skillmatrix-dto/pom.xml
@@ -10,24 +10,30 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>skillmatrix-service</artifactId>
+    <artifactId>skillmatrix-dto</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>by.skillmatrix</groupId>
-            <artifactId>skillmatrix-dto</artifactId>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
         </dependency>
         <dependency>
-            <groupId>by.skillmatrix</groupId>
-            <artifactId>skillmatrix-security</artifactId>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-data-rest</artifactId>
         </dependency>
         <dependency>
-            <groupId>by.skillmatrix</groupId>
-            <artifactId>skillmatrix-entity</artifactId>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
+
 </project>
